# VisionReactor-CPP

./: .gitignore  CMakeLists.txt  README.md  Record.md  main.cpp
doc/: Class Diagram.md  Data Flow.md  Output Buffer 发送状态机.md  Record.md  全流程.drawio
include/: Acceptor.h  AsyncAIEngine.h  Buffer.h  Channel.h  Connection.h  Epoll.h  EventLoop.h  InetAddress.h  LatencyProfiler.h  Server.h  Socket.h  ThreadPool.h  util.h
proto/: game_ai.grpc.pb.cc  game_ai.grpc.pb.h  game_ai.pb.cc  game_ai.pb.h  game_ai.proto
python_ai/: Pserver.py  dummy_server.py  game_ai.proto  game_ai_pb2.py  game_ai_pb2_grpc.py
rpc_test/: CMakeLists.txt  dummy_client.cpp  dummy_client_async.cpp
src/: Acceptor.cpp  AsyncAIEngine.cpp  Channel.cpp  Connection.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Server.cpp  Socket.cpp  epoll_server.cpp
tests/: Buffer_bench.cpp  ThreadPool_bench.cpp  buffer_test.cpp  connection_test.cpp  thread_test.cpp
